--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+       <title>Hopper!</title>
   <script src="keyboarder.js" defer></script>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+      <main>
+    <section id="gameplay-box">
+       <canvas width= "1000px" height="1000px" id="canvas"></canvas>
+    </section>
+
+        <section id="menu-box">
+
+      <p>This is how you play</p>
+         <button id="button">Start!</button>
+    </section> 
+    
+         </main>
+
+
+
+
   
 </body>
 </html>
