css bug fixed, JS added, and html edited

--- a/index.html
+++ b/index.html
@@ -9,22 +9,12 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-      <main>
-    <section id="gameplay-box">
+    <main>
        <canvas width= "1000px" height="1000px" id="canvas"></canvas>
-    </section>
-
-        <section id="menu-box">
-
-      <p>This is how you play</p>
-         <button id="button">Start!</button>
-    </section> 
-    
-         </main>
-
-
-
-
-  
+       <div id="menu-box">
+          <p>This is how you play</p>
+          <a href="#" id="button">Start!</a>
+      </div> 
+    </main>
 </body>
 </html>
