--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
        <title>Hopper!</title>
-  <script src="keyboarder.js" defer></script>
+  <script src="main.js" defer></script>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -13,7 +13,7 @@
        <canvas width= "1000px" height="1000px" id="canvas"></canvas>
        <div id="menu-box">
           <p>This is how you play</p>
-          <a href="#" id="button">Start!</a>
+          <button id="start-button">Start!</button>
       </div> 
     </main>
 </body>
