--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
        <canvas width= "800px" height="800px" id="canvas"></canvas>
        <div id="menu-box">
-          <p>This is how you play</p>
+          <p>Using the arrow keys, get to the other side of the field without getting eaten!</p>
           <button onclick= "startGame ()" id="start-button">Start!</button>
       </div> 
     </main>
